--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <groupId>com.HandballStats_Pro</groupId>
     <artifactId>handballstatspro</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>handballstatspro</name>
     <description>HandballStats Pro project for Spring Boot</description>
 
