--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=handballstatspro
 
 # Configuración del datasource para MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/HandballStats_Pro?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://{MYSQLHOST}:{MYSQLPORT}/{MYSQL_DATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username={MYSQLUSER}
+spring.datasource.password={MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JWT Configuration
