--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=handballstatspro
 
 # Configuración del datasource para MySQL
-spring.datasource.url=jdbc:mysql://{MYSQLHOST}:{MYSQLPORT}/{MYSQL_DATABASE}?useSSL=false&serverTimezone=UTC
-spring.datasource.username={MYSQLUSER}
-spring.datasource.password={MYSQLPASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate
